fix navbar jpw visited issue and contact-form wrap issue

--- a/vite-project/src/styles/main.scss
+++ b/vite-project/src/styles/main.scss
@@ -288,7 +288,8 @@ h1 {
   justify-content: space-between;
   align-items: center;
 
-  li a {
+  li a,
+  h2 a {
     list-style: none;
     cursor: pointer;
     transition: var(--SmoothTransition);
@@ -522,13 +523,16 @@ h1 {
 
   .quote-form-container .quote-form .form-group.double-label {
     flex-direction: row;
+    flex-wrap: wrap;
   }
+
 
   .quote-form-container .quote-form .form-group.double-label span {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: var(--halfSmallPadding);
+    min-width: 135px;
   }
 
   .quote-form-container .quote-form label {
